@@ -184,9 +184,8 @@ THE SQUIRRELMAIL TEAM
 
    Uighur        Mamatjan Tursun <oghri at 163.com>
 
-   Ukrainian     Oleg Baranovsky <oleg at uazone.net>
-    (Ukrainian is not supported until someone updates translation.
-     translation is not in Ukrainian)
+   Ukrainian     Khohlov Sergii <sergkh at westlucky.net>
+                 Serhij Dubyk <dubyk at library.lviv.ua>
 
    Vietnamese    Le Viet Hung <heros at hcm.fpt.vn>
     (Vietnamese is not supported until someone updates translation.
